hide conversion rate elements in omnichat-wrapper component (#270)
* update i18n files

* generate chart without line in chart-bar-group component

* hide conversion rate references in omnichat-wrapper component

* update styles of chart-bar-horizontal component

* update chart class in styles.scss file

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -407,5 +407,10 @@ a:active{
 
 .chart {
   width: 100%;
-  overflow: hidden;
+  overflow: visible;
+
+  @media print {
+    overflow: hidden;
+  }
 }
+
